--- a/html forms/HTC PATIENT ENROLLMENT:HIV PROGRAM.html
+++ b/html forms/HTC PATIENT ENROLLMENT:HIV PROGRAM.html
@@ -7,7 +7,8 @@
         @Transfered@=3a296bb6-5fc8-40ee-84fc-97c13cacf8d8
         @RETURN VISIT DATE@=3ce94df0-26fe-102b-80cb-0017a47871b2
         @ENROLLMENT DATE@=badacf97-0970-4dde-aee4-5e1c2bb125f7
-
+        headerColor =#009d8e
+        fontOnHeaderColor = white
     </macros>
     <link type="text/css" rel="stylesheet"
           href="/openmrs/moduleResources/rwandahivflowsheet/hiv_flowsheet_new_row.css"/>
