--- a/html forms/HTC RECEPTION.html
+++ b/html forms/HTC RECEPTION.html
@@ -9,7 +9,8 @@
         @HTC_RECEPTION_OF_RESULTS@=b111b3b2-ea5d-43f8-a8ee-c1d7928f3f78
         @REFUSED_TO_JOIN_HIV_PROGRAM@=7ee63b55-82e2-4786-bba5-155e52c22649
         @Transfered@=3a296bb6-5fc8-40ee-84fc-97c13cacf8d8
-
+        headerColor =#009d8e
+        fontOnHeaderColor = white
     </macros>
     <link type="text/css" rel="stylesheet"
           href="/openmrs/moduleResources/rwandahivflowsheet/hiv_flowsheet_new_row.css"/>
