--- a/html forms/HTC RESULTS.html
+++ b/html forms/HTC RESULTS.html
@@ -3,6 +3,8 @@
         @PATIENT_IDENTIFIER@=VCT NUMBER
         @TESTING_CODE@=a28ea8a3-e82f-4ad7-8ba3-2542efffa3c0
         @RESULT_OF_HIV_TEST@=3ce17cec-26fe-102b-80cb-0017a47871b2
+        headerColor =#009d8e
+        fontOnHeaderColor = white
     </macros>
     <link type="text/css" rel="stylesheet"
           href="/openmrs/moduleResources/rwandahivflowsheet/hiv_flowsheet_new_row.css"/>
