--- a/html forms/HTC Counseling and Testing.html
+++ b/html forms/HTC Counseling and Testing.html
@@ -1,4 +1,4 @@
-<htmlform>
+<htmlform xmlns="http://www.w3.org/1999/html">
     <macros>
         @PATIENT_IDENTIFIER@=VCT NUMBER
         @PARTNER_COUNSELING_CONSTRUCT@=9d3be98f-9885-420c-84b0-270327fde564
@@ -9,10 +9,37 @@
         @WHY_DID_YOU_GET_TESTED_FOR_HIV@=3ce37a7e-26fe-102b-80cb-0017a47871b2
         @PROGRAM_THAT_ORDERED_TEST@=3ce1e0e2-26fe-102b-80cb-0017a47871b2
         @Clinican_notes@=6602a73b-b8d3-40bc-bae8-f00ff3b9cceb
+        headerColor =#009d8e
+        fontOnHeaderColor = white
     </macros>
-    <link type="text/css" rel="stylesheet"
-          href="/openmrs/moduleResources/rwandahivflowsheet/hiv_flowsheet_new_row.css"/>
-    <section headerLabel="CLIENT COUNSELING">
+    <style>
+   .section {
+      border: 1px solid $headerColor;
+      padding: 2px;
+      text-align: left;
+      margin-bottom: 1em;
+   }
+   .sectionHeader {
+      background-color: $headerColor;
+      color: $fontOnHeaderColor;
+      display: block;
+      padding: 2px;
+      font-weight: bold;
+   }
+   table.baseline-aligned td {
+      vertical-align: baseline;
+   }
+   th.subheader {
+   background-color: $headerColor;
+   color:white
+   }
+
+
+
+    </style>
+
+    <section headerLabel="CLIENT COUNSELING" class="section">
+
 
         <table cellspacing="0" cellpadding="6" width="100%">
             <tr>
@@ -62,38 +89,84 @@
                     <obs conceptId="$@TYPE_OF_COUNSELING@" answerConceptId="$@INDIVIDUAL@" answerLabel="Individual"/>
                     <br/>
                 </td>
-            </tr>
-        </table>
-        <table border="1" width="100%">
-            <tr>
-                <th>
-                    Select
-                </th>
-                <th>
-                    WHY DID YOU GET TESTED FOR HIV
-                </th>
-                <th>
-                    PROGRAM THAT ORDERED TEST
-                </th>
-                <th>
-                    Clinican notes
-                </th>
-            </tr>
-            <obsgroup groupingConceptId="$@CLIENT_COUNSELING_CONSTRUCT@">
 
-                <tr>
-                    <th>Client</th>
-                    <td>
-                        <obs conceptId="$@WHY_DID_YOU_GET_TESTED_FOR_HIV@"/>
-                        <br/>
-                    </td>
-                    <td>
-                        <obs conceptId="$@PROGRAM_THAT_ORDERED_TEST@"/>
-                        <br/>
-                    </td>
-                    <td>
-                        <obs conceptId="$@Clinican_notes@"/>
-                        <br/>
+            </tr>
+
+        </table>
+
+        <table border="1" width="100">
+
+            <div hidden="divCheckbox" style="visibility: hidden;">
+                <section headerLabel="Individual" class="section">
+
+                    <tr>
+                        <th>
+                            Select
+                        </th>
+                        <th>
+                            WHY DID YOU GET TESTED FOR HIV
+                        </th>
+                        <th>
+                            PROGRAM THAT ORDERED TEST
+                        </th>
+                        <th>
+                            Clinican notes
+                        </th>
+                    </tr>
+                    <obsgroup groupingConceptId="$@CLIENT_COUNSELING_CONSTRUCT@">
+
+                        <tr>
+                            <th>Client</th>
+                            <td>
+                                <obs conceptId="$@WHY_DID_YOU_GET_TESTED_FOR_HIV@"/>
+                                <br/>
+                            </td>
+                            <td>
+                                <obs conceptId="$@PROGRAM_THAT_ORDERED_TEST@"/>
+                                <br/>
+                            </td>
+                            <td>
+                                <obs conceptId="$@Clinican_notes@"/>
+                                <br/>
+                            </td>
+                        </tr>
+                    </obsgroup>
+                </section>
+            </div>
+        </table>
+        <table border="1" width="100">
+            <div>
+                <section headerLabel="Couple" class="section">
+
+                    <tr>
+                        <th>
+                            Select
+                        </th>
+                        <th>
+                            WHY DID YOU GET TESTED FOR HIV
+                        </th>
+                        <th>
+                            PROGRAM THAT ORDERED TEST
+                        </th>
+                        <th>
+                            Clinican notes
+                        </th>
+                    </tr>
+                    <obsgroup groupingConceptId="$@CLIENT_COUNSELING_CONSTRUCT@">
+
+                        <tr>
+                            <th>Client</th>
+                            <td>
+                                <obs conceptId="$@WHY_DID_YOU_GET_TESTED_FOR_HIV@"/>
+                                <br/>
+                            </td>
+                            <td>
+                                <obs conceptId="$@PROGRAM_THAT_ORDERED_TEST@"/>
+                                <br/>
+                            </td>
+                            <td>
+                                <obs conceptId="$@Clinican_notes@"/>
+                                <br/>
                     </td>
                 </tr>
             </obsgroup>
@@ -116,12 +189,14 @@
                     </td>
                 </tr>
             </obsgroup>
+                </section>
+            </div>
         </table>
-    </section>
     <br/>
-    <center>
-        <submit/>
-    </center>
+        <center>
+            <submit/>
+        </center>
     <encounterVoided/>
-    <br/>
+        <br/>
+    </section>
 </htmlform>
