--- a/html forms/HTC Counseling and Testing.html
+++ b/html forms/HTC Counseling and Testing.html
@@ -1,4 +1,4 @@
-<htmlform xmlns="http://www.w3.org/1999/html">
+<htmlform>
     <macros>
         @PATIENT_IDENTIFIER@=VCT NUMBER
         @PARTNER_COUNSELING_CONSTRUCT@=9d3be98f-9885-420c-84b0-270327fde564
@@ -34,9 +34,80 @@
    color:white
    }
 
-
-
     </style>
+
+
+    <script type="text/javascript">
+if(jQuery){
+ $j(document).ready(function(){
+$j("#divInduvidal").hide();
+$j("#divCouple").hide();
+$j("#couple").click(function(){
+$j("#divInduvidal").hide();
+        $j("#divCouple").show();
+    });
+$j("#individual").click(function(){
+         $j("#divCouple").hide();
+        $j("#divInduvidal").show();
+    });
+ });
+}
+
+
+    </script>
+
+    <script type="text/javascript">
+if(jQuery){
+ $j(document).ready(function(){
+    if ( $j.browser.msie ) {
+        $j(":checkbox").click(function(){
+             $j(this).change();
+     });
+        }
+
+    $j(".checkboxGroup").each(function(){
+        var group = $j(this);
+        var checked = group.find(":checked").closest("td").attr("id");
+
+        var uncheckAll = function(){
+            group.find("input[type$='checkbox']").attr("checked",false);
+            group.find("input[type$='checkbox']").change();
+        }
+
+         var showSection = function(which){
+            if(which !=""){
+            var triggerIndex = which.substring(7);
+            var sectionId= "toggleble"+triggerIndex;
+            $j(".togglebles").find("tbody[id$="+sectionId+"]").fadeIn(1000);
+           }
+        }
+
+
+
+        var hideSection = function(which){
+            var sectionId= "toggleble"+which.substring(7);
+            $j(".togglebles").find("tbody[id$="+sectionId+"]").hide();
+        }
+
+    group.find("input[type$='checkbox']").click(function(){
+        if(typeof checked != "undefined")
+            hideSection(checked);
+        uncheckAll();
+        $j(this).siblings("input[type$='checkbox']").attr("checked",false);
+        $j(this).attr("checked",true);
+        checked = group.find(":checked").closest("td").attr("id");
+        $j(this).change();
+        showSection($j(this).closest("td").attr("id"));
+    });
+
+    });
+
+ });
+}
+
+
+    </script>
+
 
     <section headerLabel="CLIENT COUNSELING" class="section">
 
@@ -67,7 +138,7 @@
                     Location:
                 </td>
                 <td>
-                    <encounterLocation/>
+                    <encounterLocation id="location" default="GlobalProperty:registration.defaultLocationCode"/>
                 </td>
             </tr>
             <tr>
@@ -79,124 +150,122 @@
                     <encounterProvider/>
                 </td>
             </tr>
-            <tr>
+            <tr class="checkboxGroup">
                 <td>
                     Type of counseling:
                 </td>
 
                 <td>
-                    <obs conceptId="$@TYPE_OF_COUNSELING@" answerConceptId="$@COUPLE@" answerLabel="Couple"/>
-                    <obs conceptId="$@TYPE_OF_COUNSELING@" answerConceptId="$@INDIVIDUAL@" answerLabel="Individual"/>
+                    <obs conceptId="$@TYPE_OF_COUNSELING@" answerConceptId="$@COUPLE@" answerLabel="Couple" id="couple"
+                         style="radio"/>
+                    <obs conceptId="$@TYPE_OF_COUNSELING@" answerConceptId="$@INDIVIDUAL@" answerLabel="Individual"
+                         id="individual" style="radio"/>
                     <br/>
                 </td>
-
             </tr>
-
-        </table>
-
-        <table border="1" width="100">
-
-            <div hidden="divCheckbox" style="visibility: hidden;">
-                <section headerLabel="Individual" class="section">
-
-                    <tr>
-                        <th>
-                            Select
-                        </th>
-                        <th>
-                            WHY DID YOU GET TESTED FOR HIV
-                        </th>
-                        <th>
-                            PROGRAM THAT ORDERED TEST
-                        </th>
-                        <th>
-                            Clinican notes
-                        </th>
-                    </tr>
-                    <obsgroup groupingConceptId="$@CLIENT_COUNSELING_CONSTRUCT@">
-
-                        <tr>
-                            <th>Client</th>
-                            <td>
-                                <obs conceptId="$@WHY_DID_YOU_GET_TESTED_FOR_HIV@"/>
-                                <br/>
-                            </td>
-                            <td>
-                                <obs conceptId="$@PROGRAM_THAT_ORDERED_TEST@"/>
-                                <br/>
-                            </td>
-                            <td>
-                                <obs conceptId="$@Clinican_notes@"/>
-                                <br/>
-                            </td>
-                        </tr>
-                    </obsgroup>
-                </section>
+            <div id="client">
             </div>
         </table>
-        <table border="1" width="100">
-            <div>
-                <section headerLabel="Couple" class="section">
-
-                    <tr>
-                        <th>
-                            Select
-                        </th>
-                        <th>
-                            WHY DID YOU GET TESTED FOR HIV
-                        </th>
-                        <th>
-                            PROGRAM THAT ORDERED TEST
-                        </th>
-                        <th>
-                            Clinican notes
-                        </th>
-                    </tr>
-                    <obsgroup groupingConceptId="$@CLIENT_COUNSELING_CONSTRUCT@">
-
-                        <tr>
-                            <th>Client</th>
-                            <td>
-                                <obs conceptId="$@WHY_DID_YOU_GET_TESTED_FOR_HIV@"/>
-                                <br/>
-                            </td>
-                            <td>
-                                <obs conceptId="$@PROGRAM_THAT_ORDERED_TEST@"/>
-                                <br/>
-                            </td>
-                            <td>
-                                <obs conceptId="$@Clinican_notes@"/>
-                                <br/>
-                    </td>
-                </tr>
-            </obsgroup>
-
-            <obsgroup groupingConceptId="$@PARTNER_COUNSELING_CONSTRUCT@">
-
+        <div id="divInduvidal">
+            <table border="1" width="100%">
                 <tr>
-                    <th>Partner</th>
-                    <td>
-                        <obs conceptId="$@WHY_DID_YOU_GET_TESTED_FOR_HIV@"/>
-                        <br/>
-                    </td>
-                    <td>
-                        <obs conceptId="$@PROGRAM_THAT_ORDERED_TEST@"/>
-                        <br/>
-                    </td>
-                    <td>
-                        <obs conceptId="$@Clinican_notes@"/>
-                        <br/>
-                    </td>
+                    <th>
+                        Select
+                    </th>
+                    <th>
+                        WHY DID YOU GET TESTED FOR HIV
+                    </th>
+                    <th>
+                        PROGRAM THAT ORDERED TEST
+                    </th>
+                    <th>
+                        Clinican notes
+                    </th>
                 </tr>
-            </obsgroup>
-                </section>
-            </div>
-        </table>
-    <br/>
-        <center>
-            <submit/>
-        </center>
-    <encounterVoided/>
-        <br/>
+                <obsgroup groupingConceptId="$@CLIENT_COUNSELING_CONSTRUCT@">
+
+                    <tr>
+                        <th>Client</th>
+                        <td>
+                            <obs conceptId="$@WHY_DID_YOU_GET_TESTED_FOR_HIV@"/>
+                            <br/>
+                        </td>
+                        <td>
+                            <obs conceptId="$@PROGRAM_THAT_ORDERED_TEST@"/>
+                            <br/>
+                        </td>
+                        <td>
+                            <obs conceptId="$@Clinican_notes@"/>
+                            <br/>
+                        </td>
+                    </tr>
+                </obsgroup>
+
+            </table>
+        </div>
+
+
+        <div id="divCouple">
+            <table border="1" width="100%">
+                <tr>
+                    <th>
+                        Select
+                    </th>
+                    <th>
+                        WHY DID YOU GET TESTED FOR HIV
+                    </th>
+                    <th>
+                        PROGRAM THAT ORDERED TEST
+                    </th>
+                    <th>
+                        Clinican notes
+                    </th>
+                </tr>
+                <obsgroup groupingConceptId="$@CLIENT_COUNSELING_CONSTRUCT@">
+
+                    <tr>
+                        <th>Client</th>
+                        <td>
+                            <obs conceptId="$@WHY_DID_YOU_GET_TESTED_FOR_HIV@"/>
+                            <br/>
+                        </td>
+                        <td>
+                            <obs conceptId="$@PROGRAM_THAT_ORDERED_TEST@"/>
+                            <br/>
+                        </td>
+                        <td>
+                            <obs conceptId="$@Clinican_notes@"/>
+                            <br/>
+                        </td>
+                    </tr>
+                </obsgroup>
+
+                <obsgroup groupingConceptId="$@PARTNER_COUNSELING_CONSTRUCT@">
+
+                    <tr>
+                        <th>Partner</th>
+                        <td>
+                            <obs conceptId="$@WHY_DID_YOU_GET_TESTED_FOR_HIV@"/>
+                            <br/>
+                        </td>
+                        <td>
+                            <obs conceptId="$@PROGRAM_THAT_ORDERED_TEST@"/>
+                            <br/>
+                        </td>
+                        <td>
+                            <obs conceptId="$@Clinican_notes@"/>
+                            <br/>
+                        </td>
+                    </tr>
+                </obsgroup>
+            </table>
+        </div>
+
     </section>
+    <br/>
+    <center>
+        <submit/>
+    </center>
+    <encounterVoided/>
+    <br/>
 </htmlform>
