--- a/html forms/HTC FLOWSHEET  (VCT).html
+++ b/html forms/HTC FLOWSHEET  (VCT).html
@@ -30,11 +30,7 @@
 		background-color: $headerColor;
 		color:white
 		}
-
-
-
-
-    </style>
+	</style>
 
 
     <translations defaultLocale="fr">
@@ -103,8 +99,13 @@
 
     <br/>
     <div>
-        <section headerLabel="HTC Counseling and Testing">
+        <section headerLabel="VCT Counseling and Testing">
             <htmlformflowsheet formId="71" windowHeight="450" sharedEncounter="true" showHtmlForm="true"/>
+        </section>
+    </div>
+    <div>
+        <section headerLabel="PIT Counseling and Testing">
+            <htmlformflowsheet formId="85" windowHeight="450" sharedEncounter="true" showHtmlForm="true"/>
         </section>
     </div>
     <div>
@@ -112,31 +113,21 @@
             <htmlformflowsheet formId="79" sharedEncounter="true" showHtmlForm="true" windowHeight="400"/>
         </section>
     </div>
-
     <div>
         <section headerLabel="HTC RESULTS">
             <htmlformflowsheet formId="80" sharedEncounter="true" showHtmlForm="true" windowHeight="400"/>
         </section>
     </div>
-
     <div>
         <section headerLabel="HTC RECEPTION">
             <htmlformflowsheet formId="81" sharedEncounter="true" showHtmlForm="true" windowHeight="400"/>
         </section>
     </div>
-
     <div>
-        <section headerLabel="HTC PATIENT ENROLLMENT:HIV PROGRAM">
+        <section headerLabel="HTC PATIENT ENROLLMENT">
             <htmlformflowsheet formId="83" sharedEncounter="true" showHtmlForm="true" windowHeight="400"/>
         </section>
     </div>
-    <!--
-       <div>
-           <section headerLabel="6. RHEA ANC6: Delivery Report">
-               <htmlformflowsheet formId="76" sharedEncounter="true" showHtmlForm="true"/>
-           </section>
-       </div>
-        -->
 
     <div>
     </div>
