--- a/html forms/MC Prepex flowsheet.html
+++ b/html forms/MC Prepex flowsheet.html
@@ -49,24 +49,24 @@
     <table border="2" cellspacing="0" cellpadding="6" width="100%">
         <tr>
             <td>
-                <img src="/openmrs/images/emr_hands.gif" align="left" height="75"
-                     width="60">
+                <img src="/openmrs/moduleResources/rwandareports/images/rwanda-logo.jpg" align="left" height="100"
+                     width="100">
                 </img>
             </td>
             <td>
                 <h2>
-                    Inshuti Mu Buzima
+                    RWANDA MINISTRY OF HEALTH
                     <br />
-                    <span class="english">PIH Rwanda</span>
+                    <span class="english">MOH Rwanda</span>
                 </h2>
             </td>
             <td>
                 <strong>
                     Programme PMTCT
                     <br />
-                    Fiche Résumé du Patient : RHEA ANC
+                    Fiche Résumé du Patient : PIT
                     <br />
-                    <span class="english">RHEA ANC flowsheet</span>
+                    <span class="english">MC Prepex flowsheet</span>
                 </strong>
                 <br />
                 Fiche_resume-HIV-HFCSP-RW-V1.0-ng-21Oct10-fr
@@ -97,50 +97,41 @@
 
     <br />
     <div>
-        <section headerLabel="1. RHEA ANC1: Past Medical History">
-            <htmlformflowsheet formId="72" windowHeight="450" sharedEncounter="true" showHtmlForm="true"/>
+        <section headerLabel="prepex and Surgical Consultation Form">
+            <htmlformflowsheet formId="1" windowHeight="450" sharedEncounter="true" showHtmlForm="true"/>
         </section>
     </div>
     <div>
-        <section headerLabel="2. RHEA ANC2: Physical Examination">
-            <htmlformflowsheet formId="73" sharedEncounter="true" showHtmlForm="true" windowHeight="400"/>
-        </section>
-    </div>
-
-    <div>
-        <section headerLabel="3. RHEA ANC3: Investigation">
-            <htmlformflowsheet formId="74" sharedEncounter="true" showHtmlForm="true" windowHeight="400"/>
+        <section headerLabel="Prepex Placement Procedure Form">
+            <htmlformflowsheet formId="93" sharedEncounter="true" showHtmlForm="true" windowHeight="400"/>
         </section>
     </div>
 
     <div>
-        <section headerLabel="4. RHEA ANC4: Referral Form">
-            <htmlformflowsheet formId="75" sharedEncounter="true" showHtmlForm="true" windowHeight="400"/>
+        <section headerLabel="Prepex Post Placement discharge session">
+            <htmlformflowsheet formId="94" sharedEncounter="true" showHtmlForm="true" windowHeight="400"/>
         </section>
     </div>
 
     <div>
-        <section headerLabel="5. RHEA ANC5: Referral Confirmation Form">
-            <htmlformflowsheet formId="76" sharedEncounter="true" showHtmlForm="true" windowHeight="400"/>
+        <section headerLabel="Prepex removal Procedure">
+            <htmlformflowsheet formId="95" sharedEncounter="true" showHtmlForm="true" windowHeight="400"/>
         </section>
     </div>
 
     <div>
-        <section headerLabel="6. RHEA ANC6: Delivery Report">
-            <htmlformflowsheet formId="77" sharedEncounter="true" showHtmlForm="true"/>
+        <section headerLabel="Prepex Complication (AE) informations">
+            <htmlformflowsheet formId="98" sharedEncounter="true" showHtmlForm="true" windowHeight="400"/>
         </section>
     </div>
-
-
     <div>
+        <section headerLabel="PrePex Unscheduled visit">
+            <htmlformflowsheet formId="99" sharedEncounter="true" showHtmlForm="true" windowHeight="400"/>
+        </section>
     </div>
-
-    <br />
-    <!--
-        <center>
-        <submit submitLabel="Close Flowsheet" />
-    </center>
-         -->
-    <br />
-    <br />
+    <div>
+        <section headerLabel="PrePex Data Base">
+            <htmlformflowsheet formId="100" sharedEncounter="true" showHtmlForm="true" windowHeight="400"/>
+        </section>
+    </div>
 </htmlform>
