--- a/html forms/RHEA ANC1: Past Medical History.html
+++ b/html forms/RHEA ANC1: Past Medical History.html
@@ -1,9 +1,35 @@
-<htmlform>
-    <translations defaultLocale="en">
+<htmlform xmlns="http://www.w3.org/1999/html">
+    <macros>
+        headerColor =#009d8e
+        fontOnHeaderColor = white
+    </macros>
+    <style>
+   .section {
+      border: 1px solid $headerColor;
+      padding: 2px;
+      text-align: left;
+      margin-bottom: 1em;
+   }
+   .sectionHeader {
+      background-color: $headerColor;
+      color: $fontOnHeaderColor;
+      display: block;
+      padding: 2px;
+      font-weight: bold;
+   }
+   table.baseline-aligned td {
+      vertical-align: baseline;
+   }
+   th.subheader {
+   background-color: $headerColor;
+   color:white
+   }
+</style>
 
+    <translations defaultLocale="en">
         <code name="hd">
             <variant locale="en" value="Heart disease"/>
-            <variant locale="fr" value="Maladie du cœur"/>
+            <variant locale="fr" value="Maladie du coeur"/>
         </code>
         <code name="phone">
             <variant locale="en" value="Phone Number"/>
@@ -46,8 +72,8 @@
             <variant locale="fr" value="Rupture utérine"/>
         </code>
         <code name="Excessive Bleeding">
-            <variant locale="en" value="Excessive Bleeding (≥ 500ml) After Giving Birth"/>
-            <variant locale="fr" value="Saigne beaucoup (≥ 500 ml) peu de temps après l'accouchement"/>
+            <variant locale="en" value="Excessive Bleeding (>= 500ml) After Giving Birth"/>
+            <variant locale="fr" value="Saigne beaucoup (>= 500 ml) peu de temps après l'accouchement"/>
         </code>
         <code name="Gave Birth to a Child Who Died the Same Day">
             <variant locale="en" value="Gave Birth to a Child Who Died the Same Day"/>
@@ -278,11 +304,13 @@ $j(document).ready(function(){
 
 });
 </script>
+    <!--
     <macros>
         paperFormId = (Fill this in)
         headerColor =#009d8e
         fontOnHeaderColor = white
     </macros>
+     -->
 
     <style>
 table.risks td {
@@ -309,7 +337,7 @@ table.baseline-aligned td {
 }
 </style>
 
-    <span style="float: right">Paper Form ID: $paperFormId</span>
+    <!--<span style="float: right">Paper Form ID: $paperFormId</span>-->
     <h2>ANC Past Medical History (v1.0)</h2>
     <includeIf velocityTest="$patient.gender == 'F' ">
         <section headerCode="encounterDetails">
